// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button allows for its style to be overriden 1`] = `
<div>
  <button
    class="nx-btn"
    name="b1"
    type="input"
  />
</div>
`;

exports[`Button renders correctly 1`] = `
<div>
  <button
    class="nx-btn"
    name="b1"
    type="input"
  />
</div>
`;

exports[`Button renders correctly as a primary button 1`] = `
<div>
  <button
    class="nx-btn nx-btn--primary"
    name="b1"
    type="input"
  />
</div>
`;

exports[`Button renders correctly when disabled 1`] = `
<div>
  <button
    class="nx-btn"
    disabled=""
    name="b1"
    type="input"
  />
</div>
`;
